feat: add AGGREGATE node — wait for all upstreams, evaluate results, route to pass/fail branch
AGGREGATE is the first node type where the repeat mechanism has real semantic value:
the handler reads ctx (upstream statuses/outputs) to evaluate conditions, so repeat
ensures the evaluation sees all concurrent upstreams' final state.

Supported evaluate modes:
  count  — successCount >= N
  rate   — successRate >= N%
  script — custom Groovy boolean expression (vars: successCount/failCount/totalCount/successRate/outputs)

- AggregateHandler: evaluates conditions, routes to successNodeId or failNodeId
- DagEngine: handleAggregate() mirrors handleHub() + injects __upstreamIds into config
- GroovyHandler: expose evaluateExpression() for reuse by other handlers
- ExecutionContext: expose getNodeOutputs() read-only view
- V34 migration: register AGGREGATE in node_type_registry
- Frontend: DEFAULT_NAMES, branchHandles (success/fail), validateBeforePublish
- Update all comments: clarify AGGREGATE as the real repeat use case vs HUB/LR